--- a/next-first-steps-fin-seccion-3/dockerfile.old
+++ b/next-first-steps-fin-seccion-3/dockerfile.old
@@ -1,4 +1,5 @@
-FROM node:18-alpine
+FROM node:18-alpine 
+# el 18 es la version LTS de node y alpine es una version mas ligera de linux
 
 WORKDIR /app
 
@@ -13,3 +14,4 @@ RUN npm run build
 EXPOSE 3000
 
 CMD [ "npm", "start" ]
+# todo lo anterior es para crear una imagen de docker que contenga la aplicacion de nextjs
